# Jedy-StarWarsKubernetes-Workshop

./: GEMINI.md  Justfile  LICENSE  README.md  TODO.md
.github/workflows/: ci.yaml  release.yaml
workshop/: README.md  TODO.md
workshop/app/back/: .gitignore  README.md  pyproject.toml  requirements.txt
workshop/app/back/app/: database.py  main.py  security.py
workshop/app/back/app/routes/: ai.py  swapi.py
workshop/app/back/tests/: README.md  database.py
workshop/app/back/tests/app/: test_main.py
workshop/app/back/tests/app/routes/: test_users.py
workshop/app/front/: .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.mjs
workshop/level-0-local/: README.md  TODO.md
workshop/level-0-local/back/: README.md
workshop/level-0-local/front/: astro.config.mjs
workshop/level-1-docker/: Dockerfile.front  README.md  TODO.md
workshop/level-1-docker/front/: README.md
workshop/level-2-compose/: README.md  TODO.md  compose.production.yaml  compose.yaml
workshop/level-2-compose/front/: .dockerignore  astro.config.mjs
workshop/level-3-k8s/: Dockerfile.back.prod  Dockerfile.front.prod  README.md  TODO.md
workshop/level-3-k8s/deploy/: back.yaml  front.yaml  postgres.yaml
workshop/level-4-gateway/: README.md  TODO.md  gateway-infra.yaml
workshop/level-5-sre/: PRODUCTION_ROADMAP.md  README.md  TODO.md  back-configmap.yaml  back.yaml  front.yaml  gatewayclass.yaml  hpa.yaml  postgres.yaml  routes.yaml
workshop/level-6-mastery/: README.md  TODO.md
workshop/level-7-gitops/: README.md  TODO.md  argocd-starwars-app.yaml  argocd-values.yaml
(+38 files in other folders)
